objects/CICompany__c.object
<CustomObject>
    <fields>
        <fullName>CI360_ID__c</fullName>
        <description>This field is used to store the Unomy Id.</description>
        <externalId>true</externalId>
        <label>Unomy ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>This field is used to store the company name.</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>This field is used to store the Industry type.</description>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linkedin__c</fullName>
        <description>This field is redirect to URL of the linked in profile of the respective company.</description>
        <label>Company LinkedIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <description>This field is used to store address of the company.</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <description>This field is used to store city where the company is located.</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Country__c</fullName>
        <description>This field is used to store the Country of the company.</description>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <description>This field is used to store state of the company.</description>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>This field is used to store the phone of the company.</description>
        <label>Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>This field is used to store the Estimated revenue of the company</description>
        <label>Estimated Revenue (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>This field is used to store the employee size of the company.</description>
        <label>Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalFunding__c</fullName>
        <description>This field is used to store the total funding of the company.</description>
        <label>Total Funding (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_DateTime__c</fullName>
        <description>This field is used to store the unomy updated date and time.</description>
        <label>Updated Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>This field is redirect to URL of company website.</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>CI Company</label>
    <nameField>
        <displayFormat>CS360-{0000000}</displayFormat>
        <label>CI  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CI Companys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>